--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,14 +7,14 @@
     android:background="@color/teal_200">
 
     <fragment
-        android:name="com.example.notes.NotesFragment"
         android:id="@+id/notes"
+        android:name="com.example.notes.NotesFragment"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent"/>
 
     <FrameLayout
-        android:id="@+id/text_description"
+        android:id="@+id/text"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent"/>
