--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -8,6 +8,6 @@
         android:id="@+id/text_description"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="@dimen/text_size"
-        android:text="@string/note1_description"/>
+        android:text="@string/note1_description"
+        android:textSize="@dimen/text_size" />
 </LinearLayout>
