--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -6,9 +6,8 @@
     android:orientation="horizontal"
     android:padding="@dimen/padding">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/notes"
-        android:name="com.example.notes.NotesFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
