--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,9 +11,8 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/notes"
-        android:name="com.example.notes.NotesFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
