--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
     android:orientation="horizontal"
-    android:padding="@dimen/padding">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MainActivity"
+    tools:showIn="@layout/activity_main"
+    android:background="@android:color/darker_gray">
 
     <FrameLayout
         android:id="@+id/notes"
@@ -13,7 +17,7 @@
         android:layout_weight="1" />
 
     <FrameLayout
-        android:id="@+id/text"
+        android:id="@+id/text_land"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
