--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="@dimen/text_size"
+    android:layout_margin="@dimen/margin"
     android:textColor="@color/black"
-    android:padding="@dimen/padding">
-
+    android:id="@+id/title_note">
 </TextView>
