--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="padding">30dp</dimen>
+    <dimen name="padding">20dp</dimen>
     <dimen name="text_size">30sp</dimen>
+    <dimen name="cardElevation">3dp</dimen>
+    <dimen name="margin">10dp</dimen>
 </resources>
